[package]
name = "fanbox-dl"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3", features = ["derive", "env"] }
filetime = "0.2"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
